--- a/application/admin/View/Product/lst.html
+++ b/application/admin/View/Product/lst.html
@@ -61,7 +61,7 @@
                                                 <td>
                                                  
     {if condition="$vo['pdt_pic'] neq null"}
-          <img src="__uploads__/{$vo.pdt_pic}" class="tpl-table-line-img" />
+          <img src="__uploads__/{$vo.pdt_pic}" style="width:60px;height: 60px" class="tpl-table-line-img" />
     {else/}
           <span>暂无图片</span>
     {/if}                                                    
