--- a/application/admin/View/layout/left.html
+++ b/application/admin/View/layout/left.html
@@ -1,6 +1,6 @@
  <div class="left-sidebar">
             <!-- 用户信息 -->
-            <div class="tpl-sidebar-user-panel">
+           <!--  <div class="tpl-sidebar-user-panel">
                 <div class="tpl-user-panel-slide-toggleable">
                     <div class="tpl-user-panel-profile-picture">
                         <img src="__admin__/assets/img/user04.png" alt="">
@@ -11,7 +11,7 @@
           </span>
                     <a href="javascript:;" class="tpl-user-panel-action-link"> <span class="am-icon-pencil"></span> 账号设置</a>
                 </div>
-            </div>
+            </div> -->
 
             <!-- 菜单 -->
             <ul class="sidebar-nav">
@@ -302,7 +302,7 @@
                         <span class="am-icon-chevron-down am-fr am-margin-right-sm sidebar-nav-sub-ico"></span>
                     </a>
                     <ul class="sidebar-nav sidebar-nav-sub">
-                        <li class="sidebar-nav-link">
+                        <li class="sidebar-nav-link" >
                             <a href="{:url('operation/market')}" >
                                 <span class="sidebar-nav-link-logo"></span> 销售情况
                             </a>
