--- a/application/index/view/Customer/add.html
+++ b/application/index/view/Customer/add.html
@@ -38,14 +38,14 @@
 
 						<!--个人信息 -->
 						<div class="info-main" >
-							<form action="" method="post" class="am-form am-form-horizontal" >
+							<form action="" method="post" class="am-form am-form-horizontal" id="addform">
 
 							
 
 								<div class="am-form-group">
 									<label for="user-name" class="am-form-label">用户姓名</label>
 									<div class="am-form-content">
-										<input type="text" id="user-name2" placeholder="name" name="cus_name">
+										<input type="text" id="user-name2" placeholder="name" name="cus_name" minlength="2" maxlength="10" data-validation-message="用户名称最少为两个字符，最多十个字符" required/>
 
 									</div>
 								</div>
@@ -69,33 +69,33 @@
 								<div class="am-form-group">
 									<label for="user-birth" class="am-form-label">登录密码</label>
 									<div class="am-form-content birth">
-										<input type="text" name="cus_password" placeholder="password"/>
+										<input id="pwd1" type="password" name="cus_password" placeholder="请输入六位登录密码" pattern="^\d{6}$" required/>
 									</div> 							
 								</div>
 								<div class="am-form-group">
 									<label for="user-birth" class="am-form-label">确认密码</label>
 									<div class="am-form-content birth">
-										<input type="text"  placeholder="password"/>
+										<input type="password"  placeholder="请再次确认密码"  data-equal-to="#pwd1" required/>
 									</div> 							
 								</div>
 								<div class="am-form-group">
-									<label for="user-phone" class="am-form-label">电话</label>
+									<label for="user-phone" class="am-form-label">手机号码：</label>
 									<div class="am-form-content">
-										<input id="user-phone" placeholder="telephonenumber" type="tel" name="cus_phone">
+										<input class="js-pattern-mobile" id="user-phone" placeholder="telephonenumber" type="tel" name="cus_phone" data-validation-message="请输入您的有效联系方式，以便我们与您取得联系" required/>
 
 									</div>
 								</div>
 								<div class="am-form-group">
 									<label for="user-email" class="am-form-label">电子邮件</label>
 									<div class="am-form-content">
-										<input id="user-email" placeholder="Email" type="email" name="cus_email">
+										<input id="user-email" placeholder="Email" type="email" name="cus_email" required>
 
 									</div>
 								</div>
 								<div class="am-form-group">
 									<label for="user-birth" class="am-form-label">收货地址</label>
 									<div class="am-form-content birth">
-										<input type="text" name="cus_address" placeholder="Address"/>
+										<input type="text" name="cus_address" placeholder="Address" required/>
 									</div> 							
 								</div>
 								<!-- <div class="am-form-group address" style="display: block;">
@@ -138,4 +138,30 @@
 					</div>
 
 				</div>
-	
+		<script type="text/javascript">
+$(function() {
+	if ($.AMUI && $.AMUI.validator) {
+    $.AMUI.validator.patterns.mobile = /^\s*1\d{10}\s*$/;
+  }
+  $('#addform').validator({
+    onValid: function(validity) {
+      $(validity.field).closest('.am-form-group').find('.am-alert').hide();
+    },
+
+    onInValid: function(validity) {
+      var $field = $(validity.field);
+      var $group = $field.closest('.am-form-group');
+      var $alert = $group.find('.am-alert');
+      // 使用自定义的提示信息 或 插件内置的提示信息
+      var msg = $field.data('validationMessage') || this.getValidationMessage(validity);
+
+      if (!$alert.length) {
+        $alert = $('<div class="am-alert am-alert-danger"></div>').hide().
+          appendTo($group);
+      }
+
+      $alert.html(msg).show();
+    }
+  });
+});
+	</script>
