--- a/application/index/view/Login/index.html
+++ b/application/index/view/Login/index.html
@@ -46,7 +46,7 @@
             <div class="login-links">
                 <label for="remember-me"><input id="remember-me" type="checkbox">记住密码</label>
 								<a href="#" class="am-fr">忘记密码</a>
-								<a href="{:url('Customer/add')}" class="zcnext am-fr am-btn-default">注册</a>
+								
 								<br />
             </div>
 								<div class="am-cf">
@@ -54,11 +54,11 @@
 								</div>
 					</form>
 						<div class="partner">		
-								<h3>合作账号</h3>
-							<div class="am-btn-group">
-								<li><a href="#"><i class="am-icon-qq am-icon-sm"></i><span>QQ登录</span></a></li>
-								<li><a href="#"><i class="am-icon-weibo am-icon-sm"></i><span>微博登录</span> </a></li>
-								<li><a href="#"><i class="am-icon-weixin am-icon-sm"></i><span>微信登录</span> </a></li>
+								<h3>注册</h3>
+							<div class="am-btn-group" >
+								<li><a  href="{:url('Customer/add')}"><i class="am-icon-qq am-icon-sm"></i><span>客户注册</span></a></li>
+								<li style="width: 150px; margin-right: -20px;"><a  href="{:url('supplier/add')}"><i class="am-icon-weibo am-icon-sm"></i><span>供应商申请</span> </a></li>
+								
 							</div>
 						</div>	
 
