--- a/application/admin/View/Product/add.html
+++ b/application/admin/View/Product/add.html
@@ -12,12 +12,12 @@
                             </div>
                             <div class="widget-body am-fr">
 
-                                <form action="" method="post"class="am-form tpl-form-border-form tpl-form-border-br" enctype="multipart/form-data">
+<form data-am-validator  action="" method="post"class="am-form tpl-form-border-form tpl-form-border-br" enctype="multipart/form-data">
 <div class="am-form-group">
-    <label for="user-name" class="am-u-sm-3 am-form-label">商品名称 <span class="tpl-form-line-small-title">Name</span></label>
+    <label for="user-name" class="am-u-sm-3 am-form-label  ">商品名称 <span class="tpl-form-line-small-title">Name</span></label>
     <div class="am-u-sm-9">
-        <input type="text" class="tpl-form-input" id="user-name" placeholder="请输入标题文字" name="pdt_name">
-        <small>请填写标题文字10-20字左右。</small>
+        <input type="text" class="tpl-form-input am-form-field" id="user-name" placeholder="请输入商品名称" name="pdt_name" minlength="2" maxlength="10"  required>
+        <small>请填写商品名称2-10字左右。</small>
     </div>
 </div>
 
@@ -59,7 +59,7 @@
             </div> -->
             <button type="button" class="am-btn am-btn-danger am-btn-sm">
 <i class="am-icon-cloud-upload"></i> 添加商品图片</button>
-            <input id="doc-form-file" type="file" name="pdt_pic">
+            <input id="doc-form-file" type="file" name="pdt_pic" required>
         </div>
 
     </div>
@@ -69,8 +69,8 @@
 <div class="am-form-group">
             <label for="user-phone" class="am-u-sm-3 am-form-label">所属分类 <span class="tpl-form-line-small-title">Pid</span></label>
             <div class="am-u-sm-9">
-            <select data-am-selected="{searchBox: 1}" style="display:none;" name="pdt_cate_id">
-              <option value="0">顶级分类</option>
+            <select data-am-selected="{searchBox: 1}" style="display:none;" name="pdt_cate_id" required>
+              <option value="">顶级分类</option>
     {volist name="cateRes" id="vo"}
               <option value="{$vo.id}"><?php echo str_repeat('-',$vo['level']*4);?>{$vo.cate_name}</option>
              <!--  这个地方犯了错误 在 volist循环中应该用 vo代表要循环的值 -->
@@ -83,7 +83,7 @@
     <div class="am-form-group">
         <label for="user-weibo" class="am-u-sm-3 am-form-label">商品品牌 <span class="tpl-form-line-small-title">Type</span></label>
         <div class="am-u-sm-9">
-            <input type="text" id="user-weibo" placeholder="请添加分类用点号隔开" name="pdt_brand">
+            <input type="text" id="user-weibo" placeholder="请添加分类用点号隔开" name="pdt_brand" required>
             <div>
 
             </div>
@@ -122,5 +122,11 @@
                     </div>
                 </div>
     </div>
+
     </div>
+
+
+  
+
+
 
