--- a/application/admin/View/layout/header.html
+++ b/application/admin/View/layout/header.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="__admin__/assets/css/amazeui.datatables.min.css" />
     <link rel="stylesheet" href="__admin__/assets/css/app.css">
     <script src="__admin__/assets/js/jquery.min.js"></script>
+   
 
 
 
@@ -30,7 +31,8 @@
         <header>
             <!-- logo -->
             <div class="am-fl tpl-header-logo">
-                <a href="javascript:;"><img src="__admin__/assets/img/logo.png" alt=""></a>
+                <!-- <a href="javascript:;"><img src="__admin__/assets/img/logo.png" alt=""></a> -->
+                <span style="color:rgb(88, 141, 187); ;font-weight: bold;font-size: 23px; display: inline-block; margin-top: 10px;">MRO工业品平台</span>
             </div>
             <!-- 右侧内容 -->
             <div class="tpl-header-fluid">
@@ -56,13 +58,13 @@
                         </li>
 
                         <!-- 新邮件 -->
-                        <li class="am-dropdown tpl-dropdown" data-am-dropdown>
+                     <!--    <li class="am-dropdown tpl-dropdown" data-am-dropdown>
                             <a href="javascript:;" class="am-dropdown-toggle tpl-dropdown-toggle" data-am-dropdown-toggle>
                                 <i class="am-icon-envelope"></i>
                                 <span class="am-badge am-badge-success am-round item-feed-badge">4</span>
-                            </a>
+                            </a> -->
                             <!-- 弹出列表 -->
-                            <ul class="am-dropdown-content tpl-dropdown-content">
+               <!--              <ul class="am-dropdown-content tpl-dropdown-content">
                                 <li class="tpl-dropdown-menu-messages">
                                     <a href="javascript:;" class="tpl-dropdown-menu-messages-item am-cf">
                                         <div class="menu-messages-ico">
@@ -106,17 +108,17 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <!-- 新提示 -->
-                        <li class="am-dropdown" data-am-dropdown>
+                    <!--     <li class="am-dropdown" data-am-dropdown>
                             <a href="javascript:;" class="am-dropdown-toggle" data-am-dropdown-toggle>
                                 <i class="am-icon-bell"></i>
                                 <span class="am-badge am-badge-warning am-round item-feed-badge">5</span>
                             </a>
-
+ -->
                             <!-- 弹出列表 -->
-                            <ul class="am-dropdown-content tpl-dropdown-content">
+                 <!--            <ul class="am-dropdown-content tpl-dropdown-content">
                                 <li class="tpl-dropdown-menu-notifications">
                                     <a href="javascript:;" class="tpl-dropdown-menu-notifications-item am-cf">
                                         <div class="tpl-dropdown-menu-notifications-title">
@@ -158,7 +160,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <!-- 退出 -->
                         <li class="am-text-sm">
