--- a/application/index/view/Supplier/add.html
+++ b/application/index/view/Supplier/add.html
@@ -38,14 +38,14 @@
 
 						<!--个人信息 -->
 						<div class="info-main">
-							<form action="" method="post" class="am-form am-form-horizontal" >
+							<form action="" method="post" class="am-form am-form-horizontal" id="addform" >
 
 							
 
 								<div class="am-form-group">
 									<label for="user-name" class="am-form-label">供应商名称</label>
 									<div class="am-form-content">
-										<input type="text" id="user-name2" placeholder="name" name="sp_name">
+										<input type="text" id="user-name2" placeholder="name" name="sp_name" minlength="2" maxlength="10" data-validation-message="供应商名称最少为两个字符，最多十个字符" required>
 
 									</div>
 								</div>
@@ -67,23 +67,23 @@
 
 								
 								<div class="am-form-group">
-									<label for="user-phone" class="am-form-label">电话</label>
+									<label for="user-phone" class="am-form-label">手机号</label>
 									<div class="am-form-content">
-										<input id="user-phone" placeholder="telephonenumber" type="tel" name="sp_phone">
+										<input class="js-pattern-mobile" id="user-phone" placeholder="phonenumber" type="tel"  name="sp_phone" data-validation-message="请输入您的有效联系方式，以便我们与您取得联系" required>
 
 									</div>
 								</div>
 								<div class="am-form-group">
 									<label for="user-email" class="am-form-label">电子邮件</label>
 									<div class="am-form-content">
-										<input id="user-email" placeholder="Email" type="email" name="sp_email">
+										<input id="user-email" placeholder="Email" type="email" name="sp_email" data-validation-message="请输入有效的邮箱地址" required>
 
 									</div>
 								</div>
 								<div class="am-form-group">
 									<label for="user-birth" class="am-form-label">联系地址</label>
 									<div class="am-form-content birth">
-										<input type="text" placeholder="Address"name="sp_address"/>
+										<input type="text" placeholder="Address"name="sp_address" data-validation-message="请输入联系地址" required/>
 										<!-- <div class="birth-select">
 											<select data-am-selected name="sp_address">
 												<option value="a">2015</option>
@@ -110,7 +110,8 @@
 <div class="am-form-group">
             <label for="user-phone" class=" am-form-label">经营类型 </label>
            <div class="am-form-content">
-            <select name="sp_cate_id">
+            <select name="sp_cate_id" data-validation-message="请根据提示选择贵公司的经营类型" required>
+            	<option value="">请选择经营类型</option>
     {volist name="cateRes" id="vo"}
               <option value="{$vo.id}">{$vo.cate_name}</option>
             
@@ -122,7 +123,7 @@
 								<div class="am-form-group">
 									<label for="user-email" class="am-form-label">资质介绍</label>
 									<div class="am-form-content">
-										<textarea id="user-email" placeholder="请介绍贵公司资质" type="email" name="sp_desc"></textarea> 
+										<textarea id="user-email" placeholder="请介绍贵公司资质"  name="sp_desc" minlength="10" maxlength="150" data-validation-message="字数不少于10，不多于150"></textarea> 
 
 									</div>
 								</div>
@@ -167,4 +168,30 @@
 					</div>
 
 				</div>
-	
+	<script type="text/javascript">
+$(function() {
+	if ($.AMUI && $.AMUI.validator) {
+    $.AMUI.validator.patterns.mobile = /^\s*1\d{10}\s*$/;
+  }
+  $('#addform').validator({
+    onValid: function(validity) {
+      $(validity.field).closest('.am-form-group').find('.am-alert').hide();
+    },
+
+    onInValid: function(validity) {
+      var $field = $(validity.field);
+      var $group = $field.closest('.am-form-group');
+      var $alert = $group.find('.am-alert');
+      // 使用自定义的提示信息 或 插件内置的提示信息
+      var msg = $field.data('validationMessage') || this.getValidationMessage(validity);
+
+      if (!$alert.length) {
+        $alert = $('<div class="am-alert am-alert-danger"></div>').hide().
+          appendTo($group);
+      }
+
+      $alert.html(msg).show();
+    }
+  });
+});
+	</script>
